--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,11 +54,13 @@ nav ul li {
 }
 
 ul li a {
-  color: black;
+  color: rgb(255, 255, 255);
   padding: 6px 26px;
   border: 4px solid transparent;
   text-decoration: none;
   text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bolder;
 }
 
 ul li a:hover {
@@ -68,7 +70,7 @@ ul li a:hover {
 header{
   background-image: url("/img/fundo_site.png");
   background-repeat: no-repeat;
-  background-size: 110%;
+  background-size: 160%;
 }
 
 .tamanho_img {
@@ -113,4 +115,16 @@ header img{
 
 img{
   width: 100%;
+}
+
+#divider{
+  background-image: url("/img/sdv_divider.png");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 541px;
+}
+
+main{
+  background: linear-gradient(-180deg, #fae791, #ffffcc);
 }
